# llamacpp-panel

./: .gitignore  AGENTS.md  README.md  README.zh.md  llamacpp-panel.spec  main.py  pyproject.toml
.github/workflows/: release.yml
config/templates/: min.json
docs/: llama-server-params.md  requirments.md  troubleshooting.md
docs/design/: README.md  ui_design.md
docs/design/models/: README.md
docs/design/services/: README.md
docs/design/ui/: README.md
docs/design/utils/: README.md
docs/plans/: 2026-04-24-github-actions-release.md  2026-04-24-init-plan.md
scripts/: build.ps1  build.sh  setup-venv.ps1  setup.sh  test.sh
src/: config.py
src/models/: errors.py  monitor.py  restart_config.py  server_config.py  ssh_config.py
src/services/: config_service.py  monitor_service.py  param_service.py  process_manager.py  ssh_service.py
src/ui/: app.py  log_panel.py  param_panel.py  ssh_panel.py  toolbar.py
src/utils/: cross_platform.py  file_utils.py
tests/: conftest.py
tests/models/: test_errors.py  test_monitor.py  test_restart_config.py  test_server_config.py  test_ssh_config.py
tests/services/: test_config_service.py  test_monitor_service.py  test_param_service.py  test_process_manager.py  test_ssh_service.py
tests/utils/: test_cross_platform.py  test_file_utils.py
